# ppm-viewer

./: .gitignore  CMakeLists.txt  README.md
src/: PPMParser.cpp  PPMParser.hpp  main.cpp
